--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -5,9 +5,10 @@ resources:
   - calibre
   # - docuseal
   - ghost
+  - immich
   - jellyfin
   - metube
   - paperless-ngx
-  - photoprism
+  # - photoprism
   - qbittorrent
   - sterling-pdf
