--- a/cluster/apps/media/immich/kustomization.yaml
+++ b/cluster/apps/media/immich/kustomization.yaml
@@ -3,4 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  # - pvc.yaml
+  - configmap.yaml
+  - postgres-db.yaml
+  - pvc-ml-cache.yaml
