--- a/cluster/apps/media/immich/postgres-db.yaml
+++ b/cluster/apps/media/immich/postgres-db.yaml
@@ -37,7 +37,7 @@ spec:
   resources:
     requests:
       cpu: 100m
-      memory: 100Mi
+      memory: 500Mi
     limits:
       cpu: 500m
-      memory: 500Mi
+      memory: 1Gi
