--- a/cluster/apps/media/immich/pvc-ml-cache.yaml
+++ b/cluster/apps/media/immich/pvc-ml-cache.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: media
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
-  storageClassName: ceph-block
+  storageClassName: ceph-filesystem
