bambu-storage: repoint config

--- a/cluster/apps/tools/bambu-studio/helm-release-storage.yaml
+++ b/cluster/apps/tools/bambu-studio/helm-release-storage.yaml
@@ -65,6 +65,6 @@ spec:
       data:
         enabled: true
         type: persistentVolumeClaim
-        existingClaim: bambu-storage-settings
+        existingClaim: bambu-studio
         globalMounts:
           - path: /shared
