--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -19,7 +19,7 @@ stringData:
     MEDIA_CALIBRE_GUAC_PASSWORD: ENC[AES256_GCM,data:bhql9/TiM3E+j7g=,iv:F3uWHadcmlt7+khojFgk4JfOArOlQOvc5l0yD/x02Ak=,tag:DHqKGn2z+7c7aavxFZoSeQ==,type:str]
     MEDIA_GHOST_DB_USER: ENC[AES256_GCM,data:hu/2WamknoZC/VrV,iv:BxWeNTGVPM+PH69371E/qtl4oC0HGb7hwmpK0JmxDgM=,tag:3hbvhS4FcGh/SjxgR9fgWw==,type:str]
     MEDIA_GHOST_DB_DB: ENC[AES256_GCM,data:5vkz40dC+Yo=,iv:xu1Rmdc5qSDhWCfwu7JrO3PZU6mZNyUggE7NhQE3z48=,tag:yxPDbO0hPeqUCTSjDBVITg==,type:str]
-    MEDIA_PAPERLESS_DB_PASSWORD: ENC[AES256_GCM,data:Ad3mV+5/93a130JP,iv:wfE5WMjgGeFbCK09UG0Zmr0B5OdbaNA782UdrbPnJ9k=,tag:fsF4IufGnQDwsV+apzWN4w==,type:str]
+    MEDIA_PAPERLESS_REDIS_PASSWORD: ENC[AES256_GCM,data:FnekesnvLqPlMk3oCAYE+Q==,iv:p1Uru0TWMvMBc96QRPm4P+elavf7fuOJp+jU0yBeOXI=,tag:dyeVI2hNcKtd6Yba7X+EGQ==,type:str]
     MEDIA_PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:3wQ/Vzek3dF52wrDnCLiOA==,iv:N5NKno2c4p0Su0soTqkfr3TOz4yFQN00fllw0MUMAvY=,tag:i0wuWWsddPyITTuf6Vtl7A==,type:str]
     MEDIA_PAPERLESS_SMB_USERS: ENC[AES256_GCM,data:NPaTppQrwXvWMNKcAjLhvP1lXain8LdTD665EdVfsjHBKVs=,iv:GoI2GHHfYYCpVccCENPVf8c/e6kdm5xIf+j6rkySzGs=,tag:1cIVYeyydYVDeGy3soxa1A==,type:str]
     #ENC[AES256_GCM,data:juiziOPL8sXl20I=,iv:fG9D6GGivjNjuOoDblbQsZhpxbBCqcOZtvbxJsHPn8g=,tag:jjLlI/DcojnZLsjGqCjhMA==,type:comment]
@@ -44,7 +44,7 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-10-26T16:56:54Z"
-    mac: ENC[AES256_GCM,data:LAi14kvNy8IvP38uYnTYe+1hAZD7kE3eOMDscnOmoQfBSWsR1HkeVuhJ8wS+rFKBuQCApTO42262LrvlIhYiDBa844bhve6+a03/AmAeEHZDLLF9x0xwIexC/Wi8hYz8G+8sCYAeUWaLOgl5mQXOQT5JClWKJ7RpLUY+EVDklkE=,iv:q2Zfw+iwTdV/YfJqcMnLY2POAoTMIndJwGo/2P+/Oeo=,tag:C3k9bHTABSrTpZSd1TUJpA==,type:str]
+    lastmodified: "2025-10-30T00:51:07Z"
+    mac: ENC[AES256_GCM,data:rFYeyCLwcgKPm2PlfBu4heQQW/FGtITGR14xdGINpZ2r0OMRCmAGXEV3lC0aK+zU0bzqtUgzvLxkfw9SbRgbv1RGWWFE8hg2yNcD0hfJdjaj51nrW4QGPwKFejVYELiUyLLPa7G/pBR61PDjbYb6psq/GC/8yBj0oFnUg2mKPdU=,iv:cAHjN2F2946CHhGWo1uNbRIYfyrEFoBjfqHvuESg0LQ=,tag:AgJmFkcDfzX2O0oco1P1ig==,type:str]
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.11.0
