--- a/cluster/apps/media/paperless-ngx/helm-release.yaml
+++ b/cluster/apps/media/paperless-ngx/helm-release.yaml
@@ -21,38 +21,36 @@ spec:
           main:
             image:
               repository: ghcr.io/paperless-ngx/paperless-ngx
-              tag: 2.19.2@sha256:e1e0026cdacda4bb157c024a8a1a343bd16b34d8900e7f3958598b9afebd0d38
+              tag: 2.19.3
             env:
               COMPOSE_PROJECT_NAME: paperless-ngx
               PAPERLESS_TIME_ZONE: "America/Chicago"
               PAPERLESS_URL: "https://paperless.sparks.codes"
               USERMAP_UID: 1000
-              PAPERLESS_DBHOST: paperless-ngx-postgresql
-              PAPERLESS_DBNAME: paperless-ngx
-              PAPERLESS_DBUSER: paperless-ngx
-              PAPERLESS_DBPASS: ${MEDIA_PAPERLESS_DB_PASSWORD}
-              PAPERLESS_REDIS: redis://paperless-ngx-redis-master:6379
+              PAPERLESS_DBNAME: paperless
+              PAPERLESS_DBHOST: "paperless-ngx-postgresql.media.svc.cluster.local"
+              PAPERLESS_DBPORT: "5432"
+              PAPERLESS_DBSSLMODE: "prefer"
+              PAPERLESS_DBUSER:
+                valueFrom:
+                  secretKeyRef:
+                    name: paperless.paperless-ngx-postgresql.credentials.postgresql.acid.zalan.do
+                    key: username
+              PAPERLESS_DBPASS:
+                valueFrom:
+                  secretKeyRef:
+                    name: paperless.paperless-ngx-postgresql.credentials.postgresql.acid.zalan.do
+                    key: password
+              PAPERLESS_REDIS: "redis://default:${MEDIA_PAPERLESS_REDIS_PASSWORD}@paperless-ngx-valkey.media.svc.cluster.local:6379"
               PAPERLESS_CONSUMPTION_DIR: /paperless/consume
               PAPERLESS_DATA_DIR: /paperless/data
               PAPERLESS_MEDIA_ROOT: /paperless/media
-              PAPERLESS_FILENAME_FORMAT: "{created_year}/{correspondent}/{title}"
               PAPERLESS_FILENAME_FORMAT_REMOVE_NONE: true
               PAPERLESS_CONSUMER_POLLING: 60
               PAPERLESS_CONSUMER_DELETE_DUPLICATES: true
               PAPERLESS_CONSUMER_RECURSIVE: true
-              PAPERLESS_CONSUMER_SUBDIRS_AS_TAGS: true
               PAPERLESS_OCR_LANGUAGE: eng
               PAPERLESS_SECRET_KEY: ${MEDIA_PAPERLESS_SECRET_KEY}
-            probes:
-              liveness:
-                enabled: true
-              readiness:
-                enabled: true
-              startup:
-                enabled: true
-                spec:
-                  failureThreshold: 30
-                  periodSeconds: 5
 
     service:
       main:
