--- a/cluster/apps/media/paperless-ngx/kustomization.yaml
+++ b/cluster/apps/media/paperless-ngx/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - helm-release-redis.yaml
   - helm-release-postgresql.yaml
+  - helm-release-valkey.yaml
   - helm-release-smb.yaml
   - pvc-paperless.yaml
-  - pvc-postgresql.yaml
