--- a/cluster/apps/tools/kustomization.yaml
+++ b/cluster/apps/tools/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - bambu-studio
   - littlelink
-  - mailserver
+  # - mailserver
   # - n8n
   - netboot.xyz
   - ntfy
