smartctl exporter: add node selector

--- a/cluster/core/monitoring/prometheus-smartctl-exporter/helm-release.yaml
+++ b/cluster/core/monitoring/prometheus-smartctl-exporter/helm-release.yaml
@@ -94,7 +94,8 @@ spec:
 
     annotations: {}
 
-    nodeSelector: {}
+    nodeSelector:
+      beta.kubernetes.io/arch: amd64
 
     tolerations:
       - effect: NoSchedule
