--- a/cluster/apps/media/ghost/helm-release-ghost-mariadb.yaml
+++ b/cluster/apps/media/ghost/helm-release-ghost-mariadb.yaml
@@ -38,10 +38,11 @@ spec:
 
   resources:
     requests:
-      cpu: 500m
-      memory: 1Gi
+      cpu: 100m
+      memory: 256Mi
     limits:
-      memory: 1Gi
+      cpu: 200m
+      memory: 512Mi
 
   metrics:
     enabled: true
