--- a/cluster/apps/tools/ntfy/helm-release.yaml
+++ b/cluster/apps/tools/ntfy/helm-release.yaml
@@ -27,6 +27,13 @@ spec:
               TZ: America/Chicago
             args:
               - serve
+            resources:
+              requests:
+                cpu: 10m
+                memory: 128Mi
+              limits:
+                cpu: 50m
+                memory: 256Mi
     service:
       main:
         controller: main
