--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -36,6 +36,13 @@ spec:
               TZ: "America/Chicago"
             securityContext:
               privileged: true
+            resources:
+              requests:
+                memory: 128Mi
+                cpu: 50m
+              limits:
+                memory: 256Mi
+                cpu: 100m
     service:
       main:
         controller: main
