--- a/cluster/apps/media/immich/helm-release.yaml
+++ b/cluster/apps/media/immich/helm-release.yaml
@@ -54,7 +54,7 @@ spec:
                 cpu: 100m
                 memory: 256Mi
               limits:
-                memory: 4096Mi
+                memory: 2Gi
 
       machine-learning:
         strategy: RollingUpdate
