--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -50,29 +50,29 @@ spec:
               limits:
                 cpu: 200m
                 memory: 512Mi
-      code:
-        containers:
-          code:
-            image:
-              repository: ghcr.io/coder/code-server
-              tag: 4.105.1
-            args:
-              - --auth
-              - "none"
-              - --user-data-dir
-              - "/config/.vscode"
-              - --extensions-dir
-              - "/config/.vscode"
-              - --port
-              - "8081"
-              - "/config"
-            resources:
-              requests:
-                cpu: 10m
-                memory: 256Mi
-              limits:
-                cpu: 50m
-                memory: 1Gi
+      # code:
+      #   containers:
+      #     code:
+      #       image:
+      #         repository: ghcr.io/coder/code-server
+      #         tag: 4.105.1
+      #       args:
+      #         - --auth
+      #         - "none"
+      #         - --user-data-dir
+      #         - "/config/.vscode"
+      #         - --extensions-dir
+      #         - "/config/.vscode"
+      #         - --port
+      #         - "8081"
+      #         - "/config"
+      #       resources:
+      #         requests:
+      #           cpu: 10m
+      #           memory: 256Mi
+      #         limits:
+      #           cpu: 50m
+      #           memory: 1Gi
     persistence:
       config:
         enabled: true
@@ -114,22 +114,22 @@ spec:
           - secretName: acme-crt-secret-sparks-codes
             hosts:
               - esphome.sparks.codes
-      code:
-        enabled: true
-        className: nginx-internal
-        annotations:
-          nginx.ingress.kubernetes.io/auth-type: basic
-          nginx.ingress.kubernetes.io/auth-secret: codeserver-auth-secret
-          nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
-        hosts:
-          - host: &host "codeserver-esphome.sparks.codes"
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  identifier: code
-                  port: http
-        tls:
-          - secretName: acme-crt-secret-sparks-codes
-            hosts:
-              - *host
+      # code:
+      #   enabled: true
+      #   className: nginx-internal
+      #   annotations:
+      #     nginx.ingress.kubernetes.io/auth-type: basic
+      #     nginx.ingress.kubernetes.io/auth-secret: codeserver-auth-secret
+      #     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
+      #   hosts:
+      #     - host: &host "codeserver-esphome.sparks.codes"
+      #       paths:
+      #         - path: /
+      #           pathType: Prefix
+      #           service:
+      #             identifier: code
+      #             port: http
+      #   tls:
+      #     - secretName: acme-crt-secret-sparks-codes
+      #       hosts:
+      #         - *host
