--- a/cluster/apps/tools/littlelink/helm-release.yaml
+++ b/cluster/apps/tools/littlelink/helm-release.yaml
@@ -35,14 +35,14 @@ spec:
               AVATAR_ALT: Thomas Ibarra <hello@imake.software>
               NAME: Thomas Ibarra
               BIO: Chip-to-Ship, software engineering, and everything in-between.
-              BUTTON_ORDER: GITHUB,GITLAB,LINKED_IN,JOURNAL,SOUND_CLOUD,TUMBLR,YOUTUBE
-              CUSTOM_BUTTON_TEXT: Journal,Personal Gitlab
-              CUSTOM_BUTTON_URL: https://sprk.sh/journal,https://sprk.sh/gitlab
-              CUSTOM_BUTTON_COLOR: "#71CDF9,#000000"
-              CUSTOM_BUTTON_TEXT_COLOR: "#000000,#ffffff"
-              CUSTOM_BUTTON_ALT_TEXT: Personal blog,Personal Gitlab
-              CUSTOM_BUTTON_NAME: "JOURNAL,GITLAB"
-              CUSTOM_BUTTON_ICON: "fas fa-newspaper,fa-brands fa-gitlab"
+              BUTTON_ORDER: GITHUB,GITLAB,LINKED_IN,SOUND_CLOUD,TUMBLR,YOUTUBE
+              CUSTOM_BUTTON_TEXT: Personal Gitlab
+              CUSTOM_BUTTON_URL: https://sprk.sh/gitlab
+              CUSTOM_BUTTON_COLOR: "#000000"
+              CUSTOM_BUTTON_TEXT_COLOR: "#ffffff"
+              CUSTOM_BUTTON_ALT_TEXT: Personal Gitlab
+              CUSTOM_BUTTON_NAME: "GITLAB"
+              CUSTOM_BUTTON_ICON: "fa-brands fa-gitlab"
               GITHUB: https://sprk.sh/github
               # TWITTER: https://sprk.sh/twitter
               # INSTAGRAM: https://www.instagram.com/techno.tim
