--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -27,6 +27,8 @@ spec:
     controllers:
       main:
         pod:
+          annotations:
+            reloader.stakater.com/auto: "true"
           nodeSelector:
             google.feature.node.kubernetes.io/coral: "true"
             intel.feature.node.kubernetes.io/gpu: "true"
