--- a/cluster/apps/home/frigate/configmap-frigate.yaml
+++ b/cluster/apps/home/frigate/configmap-frigate.yaml
@@ -137,6 +137,10 @@ data:
               roles:
                 - detect
                 # - record
+        record:
+          enabled: false
+        snapshots:
+          enabled: false
         motion:
           enabled: true
           mask:
@@ -144,6 +148,7 @@ data:
             - 0,0.173,0.327,0.131,0.38,0.989,0.001,0.997
 
       dome_camera_2:
+        enabled: false
         ffmpeg:
           inputs:
             - path: rtsp://127.0.0.1:8554/dome_camera_2
@@ -151,35 +156,6 @@ data:
               roles:
                 - detect
                 # - record
-        onvif:
-          host: http://dome-camera-2.sparks.codes
-          port: 80
-          autotracking:
-            enabled: false
-            calibrate_on_startup: True
-            # Optional: the mode to use for zooming in/out on objects during autotracking. (default: shown below)
-            # Available options are: disabled, absolute, and relative
-            #   disabled - don't zoom in/out on autotracked objects, use pan/tilt only
-            #   absolute - use absolute zooming (supported by most PTZ capable cameras)
-            #   relative - use relative zooming (not supported on all PTZs, but makes concurrent pan/tilt/zoom movements)
-            zooming: disabled
-            # Optional: A value to change the behavior of zooming on autotracked objects. (default: shown below)
-            # A lower value will keep more of the scene in view around a tracked object.
-            # A higher value will zoom in more on a tracked object, but Frigate may lose tracking more quickly.
-            # The value should be between 0.1 and 0.75
-            zoom_factor: 0.3
-            # Optional: list of objects to track from labelmap.txt (default: shown below)
-            track:
-              - person
-            # Required: Begin automatically tracking an object when it enters any of the listed zones.
-            required_zones:
-              - zone_name
-            # Required: Name of ONVIF preset in camera's firmware to return to when tracking is over. (default: shown below)
-            return_preset: default
-            # Optional: Seconds to delay before returning to preset. (default: shown below)
-            timeout: 10
-            # Optional: Values generated automatically by a camera calibration. Do not modify these manually. (default: shown below)
-            # movement_weights: []
 
       doorbell:
         ffmpeg:
