esphome: disable resource requests

--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -43,13 +43,13 @@ spec:
               TZ: "America/Chicago"
               ESPHOME_DASHBOARD_USE_PING: "true"
               ESPHOME_DASHBOARD_RELATIVE_URL: "/"
-            resources:
-              requests:
-                cpu: 10m
-                memory: 128Mi
-              limits:
-                cpu: 200m
-                memory: 512Mi
+            # resources:
+            #   requests:
+            #     cpu: 10m
+            #     memory: 128Mi
+            #   limits:
+            #     cpu: 200m
+            #     memory: 512Mi
     persistence:
       config:
         enabled: true
