base-helm: add cillium charts

--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - bjw-s-charts.yaml
   - blakeshome-charts.yaml
   - coredns-charts.yaml
+  - cillium-charts.yaml
   - deliveryhero-charts.yaml
   - descheduler-charts.yaml
   - docker-registry-charts.yaml
