base-helm: add cilium charts

--- a/cluster/base/flux-system/charts/helm/cilium-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/cilium-charts.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: cillium-charts
+  name: cilium-charts
   namespace: flux-system
 spec:
   interval: 15m
