--- a/cluster/core/networking/cert-manager/chart/helm-release.yaml
+++ b/cluster/core/networking/cert-manager/chart/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
     config:
       apiVersion: "controller.config.cert-manager.io/v1alpha1"
       kind: "ControllerConfiguration"
-      enableGatewayAPI: true
+      # enableGatewayAPI: true
     extraArgs:
       - --dns01-recursive-nameservers-only
       - --dns01-recursive-nameservers=8.8.8.8:53,1.1.1.1:53
