--- a/cluster/apps/games/minecraft/velocity-proxy/helm-release.yaml
+++ b/cluster/apps/games/minecraft/velocity-proxy/helm-release.yaml
@@ -17,6 +17,10 @@ spec:
         namespace: flux-system
       interval: 15m
   values:
+    tolerations:
+      - key: "minecraft-dedicated"
+        operator: "Exists"
+        effect: "NoSchedule"
     minecraftProxy:
       type: VELOCITY
       velocityVersion: 3.4.0-SNAPSHOT
