--- a/cluster/apps/games/minecraft/superdigdug-poetry/kustomization.yaml
+++ b/cluster/apps/games/minecraft/superdigdug-poetry/kustomization.yaml
@@ -1,5 +1,7 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - minecraft
-  # - beammp
+  - helm-release.yaml
+  # - hr-bluemap.yaml
+  - pvc.yaml
