minecraft-bluemap: enable poetry map

--- a/cluster/apps/games/minecraft/superdigdug-poetry/hr-bluemap.yaml
+++ b/cluster/apps/games/minecraft/superdigdug-poetry/hr-bluemap.yaml
@@ -52,7 +52,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-internal"
+        className: "cloudflare-tunnel"
         annotations:
           hajimari.io/enable: "false"
         hosts:
