--- a/cluster/apps/tools/hajimari/helm-release.yaml
+++ b/cluster/apps/tools/hajimari/helm-release.yaml
@@ -100,6 +100,8 @@ spec:
               url: "https://photos.google.com"
             - name: Gmail
               url: "https://mail.google.com"
+            - name: Google Calendar
+              url: "https://calendar.google.com"
             - name: YouTube Music
               url: "https://music.youtube.com"
             - name: My Soundcloud
