provision: ansible update packages add autoremove

--- a/provision/ansible/playbooks/servers/apt/update-packages.yaml
+++ b/provision/ansible/playbooks/servers/apt/update-packages.yaml
@@ -7,3 +7,6 @@
         update_cache: "yes"
         name: "*"
         state: latest
+    - name: Autoremove unused packages
+      apt:
+        autoremove: yes
