--- a/cluster/apps/system-upgrade/system-upgrade-controller/agent-plan.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/agent-plan.yaml
@@ -30,6 +30,10 @@ spec:
       effect: NoSchedule
       operator: Equal
       value: "true"
+    - key: minecraft-dedicated
+      effect: NoSchedule
+      operator: Equal
+      value: "true"
   prepare:
     image: rancher/k3s-upgrade
     args:
