--- a/cluster/core/networking/kustomization.yaml
+++ b/cluster/core/networking/kustomization.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cert-manager
-  - cilium
+  # - cilium
   - cloudflare-ingress
   # - external-dns
-  # - metallb
+  - metallb
   # - nginx-ingress-external
-  # - nginx-ingress-internal
+  - nginx-ingress-internal
